@@ -1,2 +1,2 @@
-<div style="display: none;" class="krdata-structure krtrans" data-translations='{"tsEnterText": "{tsEnterText}", "tsTooSmall": "{tsTooSmall}", "tsPleaseReload": "{tsPleaseReload}", "tsConfigReset": "{tsConfigReset}", "tsNoDataAvailable": "{tsNoDataAvailable}", "tsAdditionalData": "{tsAdditionalData}"}'></div>
-<style type="text/css">{css}</style><script type="text/javascript">(function(){{js}})();</script>
+<style class="krdata-structure krtrans" data-translations='{"tsEnterText": "{tsEnterText}", "tsTooSmall": "{tsTooSmall}", "tsPleaseReload": "{tsPleaseReload}", "tsConfigReset": "{tsConfigReset}", "tsNoDataAvailable": "{tsNoDataAvailable}", "tsAdditionalData": "{tsAdditionalData}"}'>{css}</style>
+<script type="text/javascript">(function(){{js}})();</script>
